# xql

./: .env  Dockerfile  LICENSE  README.md  pyproject.toml
src/: database.py  main.py  model.json  model.py  resolver.py  schema.py  utility.py
